[package]
name = "rcut-lib"
version = "0.0.47"
authors = ["Viet Le <vietlq85@gmail.com>"]
edition = "2018"
description = "rcut is a Rust replacement for GNU cut that supports UTF-8."
license = "MIT/Apache-2.0"
repository = "https://github.com/vietlq/rtools/tree/master/rcut-lib"
readme = "README.md"
include = [
    "src/*.rs",
    "Cargo.toml"
]

# cargo metadata: https://doc.rust-lang.org/cargo/commands/cargo-metadata.html

# https://stackoverflow.com/questions/26946646/rust-package-with-both-a-library-and-a-binary
# https://stackoverflow.com/questions/44769922/how-to-import-a-crate-dependency-when-the-library-name-is-different-from-the-pac
[lib]
name = "rcut_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = false
debug = false
