[package]
name = "rcut"
version = "0.0.48"
authors = ["Viet Le <vietlq85@gmail.com>"]
edition = "2018"
description = "rcut is a Rust replacement for GNU cut that supports UTF-8."
license = "MIT/Apache-2.0"
repository = "https://github.com/vietlq/rtools/tree/master/rcut"
readme = "README.md"
include = [
    "src/*.rs",
    "Cargo.toml"
]

# cargo metadata: https://doc.rust-lang.org/cargo/commands/cargo-metadata.html

# https://stackoverflow.com/questions/26946646/rust-package-with-both-a-library-and-a-binary
[[bin]]
name = "rcut"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
rtools-traits = "0.0.48"
rcut-lib = "0.0.48"

[profile.release]
opt-level = 3
lto = false
debug = false
