[package]
name = "rtools-traits"
version = "0.0.51"
authors = ["Viet Le <vietlq85@gmail.com>"]
edition = "2018"
description = "rtools is a type traits library for command line tools that process input by lines."
license = "MIT/Apache-2.0"
repository = "https://github.com/vietlq/rtools/tree/master/rtools-traits"
readme = "README.md"
include = [
    "src/*.rs",
    "Cargo.toml"
]

# cargo metadata: https://doc.rust-lang.org/cargo/commands/cargo-metadata.html

# https://stackoverflow.com/questions/26946646/rust-package-with-both-a-library-and-a-binary
# https://stackoverflow.com/questions/44769922/how-to-import-a-crate-dependency-when-the-library-name-is-different-from-the-pac
[lib]
name = "rtools_traits"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = false
debug = false
